i18n integrated, code refactored

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ npm-debug.log*
 out/
 dist/
 
+# Generated NLS files (source is in src/locales/)
+package.nls.json
+package.nls.*.json
+
 # VSCode extension development
 .vscode-test/
 *.vsix
