--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cucumber-java-easy-runner",
   "displayName": "%ext.displayName%",
   "description": "%ext.description%",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "publisher": "HakkiEtem",
   "author": {
     "name": "Hakki Etem"
@@ -202,6 +202,11 @@
           ],
           "default": "info",
           "description": "%config.logLevel%"
+        },
+        "cucumberJavaEasyRunner.vmArgs": {
+          "type": "string",
+          "default": "",
+          "description": "Additional JVM arguments to pass to the Cucumber runner (e.g., -DisLogOn=true)"
         }
       }
     }
