--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cucumber-java-easy-runner",
   "displayName": "%ext.displayName%",
   "description": "%ext.description%",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "publisher": "HakkiEtem",
   "author": {
     "name": "Hakki Etem"
@@ -221,14 +221,15 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.93.1",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
-    "typescript": "^5.0.4",
+    "@types/vscode": "^1.93.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vscode/vsce": "^2.32.0",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1"
+    "typescript": "^5.0.4"
   }
 }
